Added a readme file

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h1 class="center">What is this?</h1><br>
     <div class="line" ></div>
 
-    <p> Lorem jghcjhjd zhcjs kjshfs kshufks zbhs l.klx  sjdhgsj shgsdjkhjs xnhgsjdh gdfhghd jhfjkdf hjxhfjdh hjdfkjfdn jkdjhfklidk  kjghkjfd hdhjkd nb mhjd jhdf kkjc vhhc hdjd lkfklf hjdhd hdjhjfd kdjkdj jhj.</p>
+   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati qui quia ad! Veniam neque exercitationem ipsam, voluptatem repellendus fuga laudantium temporibus, natus at quas omnis repudiandae quis, magni soluta harum?</p>
     <br>
     <br>
-        <p> Lorem Lorem jghcjhjd zhcjs kjshfs kshufks zbhs l.klx  sjdhgsj shgsdjkhjs xnhgsjdh gdfhghd jhfjkdf hjxhfjdh hjdfkjfdn jkdjhfklidk  kjghkjfd hdhjkd nb mhjd jhdf kkjc vhhc hdjd lkfklf hjdhd hdjhjfd kdjkdj jhj. </p>  
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati qui quia ad! Veniam neque exercitationem ipsam, voluptatem repellendus fuga laudantium temporibus, natus at quas omnis repudiandae quis, magni soluta harum?</p>
 </div>
 </section>
 <section id="message-layout">
@@ -57,3 +57,4 @@
 </section>
 </body>
 </html>
+
