made adjustment to the css file and the index file

--- a/index.html
+++ b/index.html
@@ -9,47 +9,48 @@
 </head>
 <body >
     <section id="main-layout" >
+        <div><h1 class="center">Welcome</h1></div><br>
     <section id="info-layout" > 
 <div class="image-section">
     <img src="img/img1.png" alt="workingonpc" />
 </div>
 <div class="text-section">
-    <h1 class="center">What is this?</h1><br>
+    <h1 class="center">Who we Are?</h1><br>
     <div class="line" ></div>
 
-   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati qui quia ad! Veniam neque exercitationem ipsam, voluptatem repellendus fuga laudantium temporibus, natus at quas omnis repudiandae quis, magni soluta harum?</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus quo tempore hic laborum mollitia ex praesentium officia vel excepturi dolorum voluptates, officiis dolores alias! Cum, debitis unde ipsa eum necessitatibus itaque temporibus voluptatum sit libero accusantium nihil. Quaerat maxime repellat mollitia, libero soluta reprehenderit officia veritatis voluptatum nesciunt porro culpa doloribus ullam et error? </p>
     <br>
     <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati qui quia ad! Veniam neque exercitationem ipsam, voluptatem repellendus fuga laudantium temporibus, natus at quas omnis repudiandae quis, magni soluta harum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus quo tempore hic laborum mollitia ex praesentium officia vel excepturi dolorum voluptates, officiis dolores alias! Cum, debitis unde ipsa eum necessitatibus itaque temporibus voluptatum sit libero accusantium nihil. Quaerat maxime repellat mollitia, libero soluta reprehenderit officia veritatis voluptatum nesciunt porro culpa doloribus ullam et error? </p>
 </div>
 </section>
 <section id="message-layout">
 <div class="form-section">
 <div class="form-box">
-<h1>Contact Us</h1><br>
+    <h1 class="contact_us">Contact Us</h1>
 <form action="">
 <div class="form-row">
 <div class="input-box">    
-<label for="name">Name</label><br>
-<input type="text" name="name" id="name" placeholder="Enter your Name" />
+<label for="firstname">First Name</label><br><br>
+<input type="text" name="firstname" id="firstname" placeholder="" />
 </div>
 </div>
 
 <div class="form-row">
 <div class="input-box">
-<label for="email">Email</label><br>
-<input type="text" name="email" id="email" placeholder="Enter your Email Address" />
+<label for="lastname">Last Name</label><br><br>
+<input type="text" name="lastname" id="lastname" placeholder="" />
 </div>
 </div>
 
 <div class="textarea-section">
-<label for="message">Message</label><br>
-<textarea cols="10" rows="20" name="message" id="message" placeholder="Enter your Message here." maxlength="400" ></textarea>
+<label for="message">Your Message</label><br><br>
+<textarea cols="10" rows="15" name="message" id="message" placeholder="" maxlength="400" ></textarea>
 </div>
 
 
 <div class="button-section">
-<button type="submit" value="Send"> Send </button>
+<button type="submit" value="Submit"> Submit </button>
 </div>
 
 </form>
